# kalshi-weather-bot

./: .gitignore  Procfile  bias_audit.py  bias_logger.py  build_historical_db.py  daily_projections.py  derive_bias.py  diag_report.py  edge_report.py  heating_profiles.json  kalshi_weather_bot_v3.py  morning_report.py  requirements.txt  score_june2.py  show_date.py  show_june3.py
reports/: gate1_preregistration.json
weatherquant/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
weatherquant/alembic/: env.py
weatherquant/alembic/versions/: 0001_initial_ledger.py  0002_ingestion_columns.py  0003_calibration_params_columns.py  0004_market_fill_columns.py  0005_market_snapshot_volume.py
weatherquant/docs/: DECISIONS.md
weatherquant/scripts/: daily_paper.sh  paper_targets.txt  pick_targets.py
weatherquant/tests/: _check_schema_0002.py  conftest.py  test_afd.py  test_available_at.py  test_backfill_point_in_time.py  test_backtest_no_lookahead.py  test_blend.py  test_bootstrap.py  test_buckets.py  test_cli.py  test_cli_parity.py  test_clv.py  test_clv_integration.py  test_crps_gradient.py  test_crps_value.py  test_drift.py  test_emos_fit_recovery.py  test_engine_settings.py  test_ev.py  test_fee.py  test_fill_event_time.py  test_fill_maker.py  test_fill_taker.py  test_gate1.py  test_graceful_degradation.py  test_grib_decode.py  test_grib_egress.py  test_grib_snap.py  test_idempotency.py  test_kelly.py  test_kxhigh_live_crosscheck.py  test_kxhigh_money_path.py  test_lead0_sanity.py  test_ledger.py  test_market_auth.py  test_market_book.py  test_market_client.py  test_market_reflect.py  test_metrics.py  test_migration_0002.py  (+27 more)
weatherquant/tests/fixtures/: _gen_fixtures.py  afd_sample_routine.txt  afd_sample_signal.txt  gefs_p01_t2m_sample.grib2  gfs_t2m_sample.grib2  hrrr_t2m_sample.grib2  v3_golden.py
weatherquant/tests/fixtures/cli/: AUS.json  CHI.json  DEN.json  LAX.json  MIA.json  NYC.json  PHI.json  README.md
weatherquant/weatherquant/: __init__.py  cli.py  registry.py  scheduler.py  time.py
weatherquant/weatherquant/calibrate/: __init__.py  crps.py  emos.py  evaluate.py  link.py  persist.py  strata.py
weatherquant/weatherquant/cli/: __init__.py  _args.py  calibrate.py  ingest.py  live.py  main.py  paper.py  pricing.py  verify.py
weatherquant/weatherquant/db/: __init__.py  ddl.py  engine.py  models.py  queries.py  types.py
weatherquant/weatherquant/ingest/: __init__.py  afd.py  available_at.py  errors.py  grib.py  idempotency.py  obs.py  orchestrator.py  writer.py
weatherquant/weatherquant/ingest/sources/: __init__.py  _client.py  nws.py  openmeteo.py  wethr.py
weatherquant/weatherquant/market/: __init__.py  auth.py  book.py  client.py  clv.py  fills.py  persist.py  reflect.py
weatherquant/weatherquant/price/: __init__.py  blend.py  buckets.py  ev.py  fee.py  kelly.py  ticker.py
weatherquant/weatherquant/verify/: __init__.py  backtest.py  bootstrap.py  drift.py  gate1.py  metrics.py  report.py  v3_reference.py
