[project]
name = "weatherquant"
version = "0.1.0"
description = "Probabilistic forecasting system pricing Kalshi daily-high-temperature markets"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    # Persistence: psycopg v3 (NOT psycopg2), SQLAlchemy Core 2.0, Alembic migrations.
    # SQLAlchemy 2.0 speaks psycopg3 via the postgresql+psycopg:// dialect (D-09 / Pitfall 4).
    "psycopg[binary]==3.3.4",
    "sqlalchemy==2.0.50",
    "alembic==1.18.4",
    # Typed config (V14 secrets handling). DATABASE_URL is read from env; pydantic-settings
    # reads the .env via its own env_file on the runtime path (python-dotenv is dev-only).
    "pydantic-settings==2.14.1",
    # Ingestion edge (D-01/D-02): Herbie .idx byte-range subset + cfgrib/eccodes GRIB2
    # decode + xarray at the I/O edge only (convert to np.ndarray before the calibration
    # core; the pure-NumPy calibration constraint governs calibration, NOT ingestion).
    # eccodes is the C-binary cfgrib binds to — the #1 install pitfall (cfgrib selfcheck
    # is the gate). APScheduler stays on 3.11.x (4.x is a different, in-flux API).
    "herbie-data==2026.3.0",
    "cfgrib==0.9.15.1",
    "xarray==2026.4.0",
    "eccodes==2.47.0",
    "httpx==0.28.1",
    "apscheduler==3.11.2",
    "numpy==2.4.6",
    # Phase-5 I/O edge (D-01): the live Kalshi orderbook WS feed + the manual RSA-PSS
    # request signer (the official REST SDK signs internally, but the WS handshake / any
    # custom call must sign manually). Allowed here because the no-scipy AST guard governs
    # calibrate/ and price/ only, NOT market/ — these never touch the pure core. kalshi-python
    # is deliberately NOT added: the REST orderbook snapshot is issued via the already-present
    # httpx + this one manual signer (RESEARCH State-of-the-Art deprecation note A6).
    "websockets==16.0",
    "cryptography==49.0.0",
    # Phase-6 reporting edge (D-11): matplotlib renders the Gate-1 reliability/PIT PNGs. Allowed
    # here because the no-scipy/sklearn AST guard governs the verify METRIC CORE only (metrics/
    # bootstrap/gate1), NOT report.py — the sole matplotlib importer, kept lazy in the render body.
    # Pre-audited APPROVED (06-RESEARCH §Package Legitimacy Audit; the SUS verdict is a documented
    # false positive — ~15yr NumFOCUS lib, already a transitive xarray dep). Exact-pinned (T-06-SC).
    "matplotlib==3.11.0",
    # AFD classifier LLM (ING-07, D-13): the official OpenAI Python SDK (publisher OpenAI,
    # pypi.org/project/openai — identity verified, T-260630-SC). classify_afd forces a
    # function tool on gpt-5.4-nano (cheapest current-gen tier matching the $3-8/day budget);
    # the pre-filter gates before any paid call and an unset key degrades gracefully (D-11).
    # Exact-pinned for house-style reproducibility.
    "openai==2.44.0",
]

[project.scripts]
# Console entrypoint for the idempotent ingestion CLI (D-15) — the historical backfill
# half of the one ingestion code path the live scheduler also drives.
weatherquant = "weatherquant.cli:main"

[dependency-groups]
# Dev/test only. timezonefinder + zoneinfo live in tests/tooling ONLY — never on the
# runtime settlement path (D-02 / Pitfall 1). The no-runtime-DST guard test enforces this.
dev = [
    "pytest>=8.0",
    "pytest-asyncio==1.4.0",
    "timezonefinder==8.2.4",
    # .env loading for tests/conftest.py + alembic/env.py only; the runtime reads env via
    # pydantic-settings' env_file, so this never ships on the runtime path.
    "python-dotenv==1.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# DB-requiring tests are marked `integration` so the fast (no-DB) subset can be selected
# with `-m "not integration"`. Registered here to avoid PytestUnknownMarkWarning.
markers = [
    "integration: tests that require a reachable Postgres via DATABASE_URL (postgresql+psycopg://)",
]
# Async source-client tests (httpx) need no per-test @pytest.mark.asyncio decorator.
asyncio_mode = "auto"

[[tool.mypy.overrides]]
# herbie-data and apscheduler ship no type stubs; silence import-not-found for them
# only (the rest of the tree stays under --strict with real types).
module = ["herbie.*", "apscheduler.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weatherquant"]
